chore: update the package.json to handle the custom command clonerepo
command clonerepo refers to clonerepo.js in the bin folder

--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
     "@octokit/rest": "^21.0.0",
     "commander": "^12.1.0",
     "simple-git": "^3.25.0"
+  },
+  "bin": {
+    "clonerepo": "./bin/clonerepo.js"
   }
 }
