--- a/package.json
+++ b/package.json
@@ -1,10 +1,33 @@
 {
+  "name": "clonerepo",
+  "version": "1.0.0",
+  "description": "CLI tool to clone a repository and push to personal GitHub profile",
+  "main": "src/index.js",
+  "bin": {
+    "clonerepo": "bin/clonerepo.js"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/fasakinhenry/clonerepo.git"
+  },
+  "keywords": [
+    "cli",
+    "github",
+    "repository",
+    "clone"
+  ],
+  "author": "Henry Fasakin",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/fasakinhenry/clonerepo/issues"
+  },
+  "homepage": "https://github.com/fasakinhenry/clonerepo#readme",
   "dependencies": {
     "@octokit/rest": "^21.0.0",
     "commander": "^12.1.0",
     "simple-git": "^3.25.0"
-  },
-  "bin": {
-    "clonerepo": "./bin/clonerepo.js"
   }
 }
