--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "clonerepo",
+  "name": "cloneme",
   "version": "1.0.0",
   "description": "CLI tool to clone a repository and push to personal GitHub profile",
   "main": "src/index.js",
   "bin": {
-    "clonerepo": "bin/clonerepo.js"
+    "clonerepo": "bin/cloneme.js"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,7 +17,8 @@
     "cli",
     "github",
     "repository",
-    "clone"
+    "clone",
+    "me"
   ],
   "author": "Henry Fasakin",
   "license": "MIT",
