chore: install express open and axios package
make the package support OAuth integration and token too
install all the packages needed for handle OAuth flow

--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
   "homepage": "https://github.com/fasakinhenry/clonerepo#readme",
   "dependencies": {
     "@octokit/rest": "^21.0.0",
+    "axios": "^1.7.2",
     "commander": "^12.1.0",
+    "express": "^4.19.2",
+    "open": "^10.1.0",
     "simple-git": "^3.25.0"
   }
 }
