refactor: change all the require statements to import statements due to render deployment errors

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "clonerepo": "bin/cloneme.js"
   },
   "scripts": {
+    "start": "node bin/cloneme.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
