--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cloneme",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "CLI tool to clone a repository and push to personal GitHub profile",
   "main": "src/index.js",
   "type": "module",
@@ -34,6 +34,8 @@
     "commander": "^12.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "fs-extra": "^11.2.0",
+    "inquirer": "^10.0.1",
     "open": "^10.1.0",
     "simple-git": "^3.25.0"
   }
